# rsynth

./: .travis.yml  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  Changes.txt  LICENSE-BSD.txt  README.md  RELEASES.md  aliases.js  crates.js  design.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml  update-docs.yml
event-queue/: Cargo.toml
event-queue/src/: lib.rs
examples/: example_synth.rs  jack_synth.rs  offline_synth.rs  test_synth.rs  vst_synth.rs
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js  trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/rsynth/backend/: trait.Stop.js
implementors/rsynth/meta/: trait.Name.js
implementors/rsynth/metaconfig/: trait.Port.js
implementors/std/error/: trait.Error.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/syllogism/: trait.IsNot.js  trait.Specialize.js
lib/core/: Cargo.toml
lib/core/examples/: test_synth.rs
lib/core/src/: envelope.rs  lib.rs  note.rs  synth.rs  synthesizer.rs  voice.rs
lib/core/src/utility/: mod.rs
lib/dsp/: Cargo.toml
lib/dsp/src/: lib.rs  time.rs
rsynth/: AudioHandler.t.html  AudioHandlerMeta.t.html  AudioRenderer.t.html  CommonAudioPortMeta.t.html  CommonMidiPortMeta.t.html  CommonPluginMeta.t.html  ContextualAudioRenderer.t.html  MidiHandlerMeta.t.html  all.html  audio_chunk.m.html  index.html  macro.audio_chunk.html  macro.macro_for_application!.html  macro.macro_for_application.html  macro.macro_for_rsynth!.html  macro.macro_for_rsynth.html  macro.macro_for_rsynth_feature_jack!.html  macro.macro_for_rsynth_feature_jack.html  macro.macro_for_rsynth_feature_vst!.html  macro.macro_for_rsynth_feature_vst.html  macro.macro_for_unpublished_crate!.html  macro.macro_for_unpublished_crate.html  macro.vst_init.html  macro.wrap_context!.html  macro.wrap_context.html  sidebar-items.js  trait.AudioHandler.html  trait.AudioHandlerMeta.html  trait.AudioRenderer.html  trait.CommonAudioPortMeta.html  trait.CommonMidiPortMeta.html  trait.CommonPluginMeta.html  trait.ContextualAudioRenderer.html  trait.MidiHandlerMeta.html  trait.Plugin.html  vst_init.m.html
rsynth/backend/: HostInterface.t.html  index.html  sidebar-items.js  trait.HostInterface.html  trait.Stop.html  trait.WithHost.html
rsynth/backend/combined/: AudioReader.t.html  AudioWriter.t.html  DeltaEvent.t.html  index.html  (+24 more)
rsynth/buffer/: fn.buffers_as_mut_slice.html  fn.buffers_as_slice.html  fn.initialize_to_zero.html  index.html  sidebar-items.js  struct.AudioBufferIn.html  struct.AudioBufferInOut.html  struct.AudioBufferOut.html  struct.AudioBufferOutChannelIteratorMut.html  struct.AudioChunk.html  struct.InterlacedSampleIterator.html
rsynth/context/: index.html  sidebar-items.js  trait.TransparentContext.html
rsynth/dev_utilities/: TestPlugin.t.html  index.html  sidebar-items.js  struct.TestPlugin.html
rsynth/envelope/: Envelope.t.html  EnvelopeIteratorItem.t.html  index.html  sidebar-items.js  struct.EnvelopeIteratorItem.html  trait.Envelope.html
rsynth/event/: ContextualEventHandler.t.html  RawMidiEvent.t.html  Timed.t.html  enum.MidlyConversionError.html  index.html  sidebar-items.js  struct.DeltaEvent.html  struct.Indexed.html  struct.Map.html  struct.RawMidiEvent.html  struct.SysExEvent.html  struct.TimeStretcher.html  struct.Timed.html  trait.ContextualEventHandler.html  trait.EventHandler.html  trait.EventHandlerExt.html
rsynth/meta/: index.html  sidebar-items.js  struct.AudioPort.html  struct.InOut.html  struct.MetaData.html  struct.MidiPort.html  trait.General.html  trait.Meta.html  trait.Name.html  trait.Port.html
rsynth/metaconfig/: AudioPort.t.html  General.t.html  InOut.t.html  Meta.t.html  MetaData.t.html  MidiPort.t.html  Name.t.html  Port.t.html  index.html  struct.AudioPort.html  struct.InOut.html  struct.MetaData.html  struct.MidiPort.html  trait.General.html  trait.Meta.html  trait.Name.html  trait.Port.html
rsynth/middleware/: index.html  sidebar-items.js
rsynth/note/: enum.NoteState.html  index.html  sidebar-items.js  struct.NoteData.html
rsynth/output_mode/: index.html  sidebar-items.js  struct.Additive.html  struct.Substitution.html  trait.OutputMode.html
rsynth/rsor/: index.html  sidebar-items.js  struct.Slice.html
rsynth/test_utilities/: index.html  sidebar-items.js  struct.DummyEventHandler.html  struct.TestPlugin.html
rsynth/utilities/: fn.initialize_to_zero.html  index.html  initialize_to_zero.v.html  sidebar-items.js
rsynth/vecstorage/: index.html  sidebar-items.js  struct.VecStorage.html
src/: context.rs  downcast.rs  envelope.rs  event.rs  is_not.rs  lib.rs  note.rs  point.rs  polyphony.rs  synth.rs  synthesizer.rs  utility.rs  voice.rs
src/backend/: event.rs  jack_backend.rs  mod.rs  vst_backend.rs
src/buffer/: mod.rs
src/dev_utilities/: chunk.rs  compatibility.rs  is_not.rs  mod.rs  specialize.rs  transparent.rs  vecstorage.rs
src/dsp/: mod.rs  pan.rs  time.rs
src/envelope/: mod.rs  staircase_envelope.rs
src/event/: event_queue.rs  mod.rs
src/meta/: mod.rs
src/metaconfig/: mod.rs
src/middleware/: frame_counter.rs  mod.rs  polyphony.rs  sample_counter.rs  timesplit.rs  zero_init.rs
src/rsynth/: context.rs.html  event.rs.html  lib.rs.html  note.rs.html
src/sound/: mod.rs
src/synthesizer/: mod.rs
src/test_utilities/: mod.rs
src/utilities/: mod.rs  polyphony.rs
src/utility/: mod.rs  note.rs
src/voice/: mod.rs
tests/: polyphony.rs
(+754 files in other folders)
