[package]
name = "rsynth"
version = "0.0.1"
authors = ["Alexander Lozada <alexanderpaullozada@gmail.com>", "Pieter Penninckx"]
description = "A library for developing audio plugins and applications, with a focus on software synthesis."
license = "BSD-3-Clause"
autoexamples = false
edition = "2018"

[features]
default = ["all"]
all = ["backend-jack", "backend-vst", "backend-combined-all"]
backend-jack = ["jack"]
backend-vst = ["vst"]
backend-combined-all = ["backend-combined-hound", "backend-combined-rimd"]
backend-combined-hound = ["hound", "backend-combined", "sample"]
backend-combined-rimd = ["rimd", "backend-combined"]
backend-combined = []

[dependencies]
asprim = "0.1"
num-traits = "0.1"
log = "0.4"
doc-comment = "0.3.1"
jack = {version = "0.6.2", optional = true}
vst = {version = "0.2.0", optional = true}
hound = {version = "3.4.0", optional = true}
sample = {version = "0.10.0", optional = true}
rimd = {git = "https://github.com/RustAudio/rimd.git", optional = true}
vecstorage = "0.1.0"
midi-consts = "0.1.0"

[dev-dependencies]
rand = "0.3"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "vst_synth"
crate-type = ["cdylib"]

[[example]]
name = "jack_synth"
