[package]
name = "rsynth"
version = "0.1.1"
authors = ["Alexander Lozada <alexanderpaullozada@gmail.com>", "Pieter Penninckx"]
description = "A library for developing audio plugins and applications, with a focus on software synthesis."
license = "MIT OR BSD-3-Clause"
autoexamples = false
edition = "2018"
readme = "README.md"
repository = "https://github.com/PieterPenninckx/rsynth"
keywords = ["audio", "real-time", "synthesis"]
categories = ["multimedia::audio"]
exclude = [".github/"]

[features]
all = ["backend-jack", "backend-vst", "backend-combined-all", "rsor_0_1"]
backend-jack = ["jack"]
backend-vst = ["vst"]
backend-combined-all = ["backend-combined-hound", "backend-combined-wav", "backend-combined-midly"]
backend-combined-hound = ["hound", "backend-combined", "dasp_sample"]
backend-combined-wav = ["wav", "backend-combined", "dasp_sample"]
backend-combined-midly = ["midly", "backend-combined"]
backend-combined = ["itertools"]
rsor_0_1 = ["rsor"]

[dependencies]
num-traits = "0.2"
log = "0.4"
jack = {version = ">= 0.6.2, <0.8.0", optional = true}
vst = {version = "0.2.0", optional = true}
hound = {version = "3.4.0", optional = true}
dasp_sample = {version = "0.11.0", optional = true}
wav = {version = "0.4.0", optional = true}
vecstorage = "0.1.0"
midi-consts = "0.1.0"
gcd = "2.0.1"
itertools = {version = "0.10.0", optional = true}
rsor = {version = "0.1.2", optional = true}

[dependencies.midly]
version = "0.5.0"
optional = true
default-features = false
features = ["std"]

[dev-dependencies]
rand = "0.3"
asprim = "0.2"
polyphony = {version = "0.1.0", features = ["midi"]}

[package.metadata.docs.rs]
features = [ "all" ]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[[example]]
name = "vst_synth"
crate-type = ["cdylib"]

[[example]]
name = "jack_synth"

[[example]]
name = "offline_synth"