[package]
name = "rsynth"
version = "0.1.1"
authors = ["Alexander Lozada <alexanderpaullozada@gmail.com>", "Pieter Penninckx"]
description = "A library for developing audio plugins and applications, with a focus on software synthesis."
license = "MIT OR BSD-3-Clause"
autoexamples = false
edition = "2018"
readme = "README.md"
repository = "https://github.com/PieterPenninckx/rsynth"
keywords = ["audio", "real-time", "synthesis"]
categories = ["multimedia::audio"]
exclude = [".github/"]

[features]
backend-jack = ["jack"]
backend-combined-all = ["backend-combined-hound", "backend-combined-midly-0-5", "backend-combined-wav-0-6"]
backend-combined-hound = ["hound", "backend-combined", "dasp_sample"]
backend-combined-wav-0-6 = ["wav-0-6", "backend-combined", "dasp_sample"]
backend-combined-midly-0-5 = ["midly-0-5", "backend-combined"]
backend-combined = ["itertools", "event-queue"]
rsor-0-1 = ["rsor"]

[dependencies]
event-queue = {path = "./event-queue", optional = true}
num-traits = "0.2"
log = "0.4"
jack = {version = "0.7.1", optional = true}
hound = {version = "3.4.0", optional = true}
dasp_sample = {version = "0.11.0", optional = true}
wav-0-6 = {package = "wav", version = "0.6.0", optional = true}
vecstorage = "0.1.2"
midi-consts = "0.1.0"
gcd = "2.0.1"
itertools = {version = "0.10.0", optional = true}
rsor = {version = "0.1.2", optional = true}

[dependencies.midly-0-5]
package = "midly"
version = "0.5.0"
optional = true
default-features = false
features = ["std"]

[dev-dependencies]
rand = "0.3"
polyphony = {version = "0.1.0", features = ["midi"]}

[package.metadata.docs.rs]
features = [ "all" ]
default-target = "x86_64-unknown-linux-gnu"
targets = []

[[example]]
name = "jack_synth"

[[example]]
name = "offline_synth"
