[package]
name = "rsynth-core"
version = "0.1.0"
authors = ["Alexander Lozada <alexanderpaullozada@gmail.com>"]

[dependencies]
vst2 = { git = "https://github.com/rust-dsp/rust-vst" }
asprim = "0.1"
num-traits = "0.1"

rsynth-dsp = { path="../dsp/" }

[dev-dependencies]
rand = "0.3"

[[example]]
name = "test_synth"
crate-type = ["cdylib"]